--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 json            = "0.12.4"
 reqwest         = { version = "0.11", features = ["blocking"] }
 anyhow          = "1.0.32"
+serde_json = "1.0"
