--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "ergonames-rust-testnet"
 version = "0.1.0"
 edition = "2021"
+description = "A SDK for resolving ErgoNames on testnet."
+documentation = "https://github.com/ergonames/ergo-names-rust-sdk"
+repository = "https://github.com/ergonames/ergo-names-rust-sdk"
+readme = "README.md"
+homepage = "https://ergonames.com/"
+license-file = "LICENSE"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
