--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "ergonames"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
-description = "A SDK for resolving ErgoNames on testnet."
-documentation = "https://github.com/ergonames/ergo-names-rust-sdk"
+description = "A SDK for interacting with ErgoNames using rust."
+documentation = "https://github.com/ergonames/ergo-names-docs/blob/master/sdks/rust.md"
 repository = "https://github.com/ergonames/ergo-names-rust-sdk"
 readme = "README.md"
 homepage = "https://ergonames.com/"
