--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ json            = "0.12.4"
 reqwest         = { version = "0.11", features = ["blocking"] }
 anyhow          = "1.0.32"
 serde_json = "1.0"
+chrono = "0.4"
