--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,17 @@
 [package]
 name = "ergonames"
-version = "0.3.6"
+version = "0.4.0"
 edition = "2021"
 description = "A SDK for interacting with ErgoNames using rust."
-documentation = "https://github.com/ergonames/ergo-names-docs/blob/master/sdks/rust.md"
+documentation = "https://zack-balbin.gitbook.io/ergonames/sdks/rust-sdk"
 repository = "https://github.com/ergonames/ergo-names-rust-sdk"
 readme = "README.md"
 homepage = "https://ergonames.com/"
 license = "MIT"
 
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-json            = "0.12.4"
 reqwest         = { version = "0.11", features = ["blocking"] }
 anyhow          = "1.0.32"
 serde_json = "1.0"
